--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/TelaEditarCandidato.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/TelaEditarCandidato.fxml
@@ -12,13 +12,30 @@
     <children>
         <AnchorPane layoutX="26.0" layoutY="21.0" prefHeight="678.0" prefWidth="1228.0" styleClass="telaaction" stylesheets="@../Admin/admin.css" AnchorPane.bottomAnchor="21.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="21.0">
          <children>
-            <TextField fx:id="txtNome" layoutX="522.0" layoutY="162.0" minHeight="-Infinity" prefHeight="30.0" styleClass="lineedit" />
-            <TextField fx:id="txtCpf" layoutX="522.0" layoutY="211.0" minHeight="-Infinity" prefHeight="30.0" styleClass="lineedit" />
-            <TextField fx:id="txtEmail" layoutX="522.0" layoutY="258.0" minHeight="-Infinity" prefHeight="30.0" styleClass="lineedit" />
-            <TextField fx:id="txtForm" layoutX="522.0" layoutY="303.0" minHeight="-Infinity" prefHeight="30.0" styleClass="lineedit" />
-            <Button layoutX="462.0" layoutY="385.0" mnemonicParsing="false" onAction="#onClickSaveEdits" prefHeight="40.0" prefWidth="120.0" styleClass="btn_entrar" text="Salvar" textFill="WHITE" />
-            <Button layoutX="611.0" layoutY="385.0" mnemonicParsing="false" onAction="#onClickResetEdits" prefHeight="40.0" prefWidth="120.0" styleClass="btn_entrar" text="Redefinir" textFill="WHITE" />
-            <Button layoutX="537.0" layoutY="453.0" mnemonicParsing="false" onAction="#onClickReturn" prefHeight="40.0" prefWidth="120.0" styleClass="btn_entrar" text="Voltar" textFill="WHITE" />
+            <AnchorPane fx:id="tabEditarCandidato" prefHeight="678.0" prefWidth="1228.0" visible="false">
+               <children>
+                  <Button layoutX="554.0" layoutY="444.0" mnemonicParsing="false" onAction="#onClickReturn" prefHeight="40.0" prefWidth="120.0" styleClass="btn_entrar" text="Voltar" textFill="WHITE" />
+                  <Button layoutX="674.0" layoutY="387.0" mnemonicParsing="false" onAction="#onClickResetEdits" prefHeight="40.0" prefWidth="120.0" styleClass="btn_entrar" text="Redefinir" textFill="WHITE" />
+                  <Button layoutX="434.0" layoutY="387.0" mnemonicParsing="false" onAction="#onClickSaveEdits" prefHeight="40.0" prefWidth="120.0" styleClass="btn_entrar" text="Salvar" textFill="WHITE" />
+                  <TextField fx:id="txtForm" layoutX="434.0" layoutY="324.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="360.0" styleClass="lineedit" />
+                  <TextField fx:id="txtEmail" layoutX="434.0" layoutY="275.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="360.0" styleClass="lineedit" />
+                  <TextField fx:id="txtCpf" layoutX="434.0" layoutY="226.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="360.0" styleClass="lineedit" />
+                  <TextField fx:id="txtNome" layoutX="434.0" layoutY="176.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="360.0" styleClass="lineedit" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="tabRegistrarCandidatura" prefHeight="678.0" prefWidth="1228.0">
+               <children>
+                  <TextField fx:id="txtNomeCad" editable="false" layoutX="14.0" layoutY="73.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="280.0" styleClass="lineedit" />
+                  <TextField fx:id="txtEmailCad" editable="false" layoutX="324.0" layoutY="73.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="280.0" styleClass="lineedit" />
+                  <TextField fx:id="txtCpfCad" editable="false" layoutX="626.0" layoutY="73.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="280.0" styleClass="lineedit" />
+                  <TextField fx:id="txtFormCad" editable="false" layoutX="934.0" layoutY="73.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="280.0" styleClass="lineedit" />
+                  <ChoiceBox fx:id="cbNomesVagas" layoutX="436.0" layoutY="194.0" prefHeight="25.0" prefWidth="337.0" />
+                  <TextField fx:id="txtCargo" editable="false" layoutX="14.0" layoutY="297.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="280.0" styleClass="lineedit" />
+                  <TextField fx:id="txtSalario" editable="false" layoutX="324.0" layoutY="297.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="280.0" styleClass="lineedit" />
+                  <TextField fx:id="txtDepart" editable="false" layoutX="626.0" layoutY="297.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="280.0" styleClass="lineedit" />
+                  <TextField fx:id="txtRegime" editable="false" layoutX="934.0" layoutY="297.0" minHeight="-Infinity" prefHeight="30.0" prefWidth="280.0" styleClass="lineedit" />
+               </children>
+            </AnchorPane>
          </children>
         </AnchorPane>
     </children>
