atribuição de recrutadores por parte da gestão e mudança na relação vaga-recrutador

--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
@@ -63,17 +63,17 @@
                                  </children>
                               </HBox>
                               <Separator orientation="VERTICAL" prefHeight="10.0" visible="false" />
-                              <TextField fx:id="ld_nome_cadastro" minHeight="-Infinity" prefHeight="30.0" promptText="Nome" styleClass="lineedit" />
+                              <TextField fx:id="ld_nome_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="Nome" styleClass="lineedit" />
                               <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
-                              <TextField fx:id="ld_email_cadastro" minHeight="-Infinity" prefHeight="30.0" promptText="Email" styleClass="lineedit" />
+                              <TextField fx:id="ld_email_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="Email" styleClass="lineedit" />
                               <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
-                              <TextField fx:id="ld_cpf_cadastro" minHeight="-Infinity" prefHeight="30.0" promptText="CPF" styleClass="lineedit" />
+                              <TextField fx:id="ld_cpf_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="CPF" styleClass="lineedit" />
                               <Separator fx:id="separator_formacao" orientation="VERTICAL" prefHeight="200.0" visible="false" />
-                              <TextField fx:id="ld_formacao_cadastro" minHeight="-Infinity" prefHeight="30.0" promptText="Formação" styleClass="lineedit" visible="false" />
+                              <TextField fx:id="ld_formacao_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="Formação" styleClass="lineedit" visible="false" />
                               <Separator minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="20.0" visible="false" />
-                              <PasswordField fx:id="ld_senha_cadastro" minHeight="-Infinity" prefHeight="30.0" promptText="Senha" styleClass="lineedit" />
+                              <PasswordField fx:id="ld_senha_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="Senha" styleClass="lineedit" />
                               <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
-                              <PasswordField fx:id="ld_senha2_cadastro" minHeight="-Infinity" prefHeight="30.0" promptText="Confirme sua senha" styleClass="lineedit" />
+                              <PasswordField fx:id="ld_senha2_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="Confirme sua senha" styleClass="lineedit" />
                               <Label fx:id="mensagem_erro2" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="355.0" textFill="#e41111">
                                  <font>
                                     <Font name="System Bold" size="12.0" />
@@ -169,7 +169,7 @@
                         <Separator prefWidth="200.0" visible="false" />
                         <VBox alignment="CENTER" prefHeight="217.0" prefWidth="253.0">
                            <children>
-                              <TextField fx:id="ld_nome" minWidth="-Infinity" onKeyReleased="#onClickEnter" prefHeight="30.0" promptText="Nome" styleClass="lineedit">
+                              <TextField fx:id="ld_nome" minWidth="-Infinity" onKeyReleased="#onClickEnter" prefHeight="30.0" promptText="CPF" styleClass="lineedit">
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
