--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/admin.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/admin.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="anchorpane" stylesheets="@admin.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.admin.AdminController">
     <children>
@@ -25,7 +26,7 @@
                         <VBox prefWidth="158.0" spacing="5" styleClass="tool-bar">
                             <Button minHeight="-Infinity" minWidth="-Infinity" onAction="#cadastrar" prefHeight="35.0" prefWidth="165.0" text="Funcionários" textFill="WHITE" />
                             <Button minHeight="-Infinity" minWidth="-Infinity" onAction="#regras" prefHeight="35.0" prefWidth="165.0" text="Regras Salariais" textFill="WHITE" />
-                            <Button minHeight="-Infinity" minWidth="-Infinity" onAction="#regras" prefHeight="35.0" prefWidth="165.0" text="Alterar Perfil" textFill="WHITE" />
+                            <Button minHeight="-Infinity" minWidth="-Infinity" onAction="#abrirSelecao" prefHeight="35.0" prefWidth="165.0" text="Alterar Perfil" textFill="WHITE" />
 
                             <!-- Espaço flexível que cresce dinamicamente -->
                             <Pane prefHeight="482.0" prefWidth="134.0" VBox.vgrow="ALWAYS" />
@@ -107,6 +108,29 @@
                 </VBox>
             </StackPane>
         </AnchorPane>
+      <AnchorPane fx:id="selecaoJanela" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: rgba(0,0,0,0.5);" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <AnchorPane layoutX="440.0" layoutY="155.0" prefHeight="411.0" prefWidth="477.0" styleClass="telaaction">
+               <children>
+                  <VBox alignment="CENTER" layoutX="174.0" layoutY="63.0" prefHeight="411.0" prefWidth="477.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label text="Seleçao de Perfil">
+                           <font>
+                              <Font name="System Bold" size="36.0" />
+                           </font>
+                        </Label>
+                        <Separator orientation="VERTICAL" prefHeight="40.0" />
+                        <Button fx:id="btn_candidato" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#alterarPerfil" prefHeight="30.0" prefWidth="200.0" text="Candidato" textFill="WHITE" />
+                        <Button fx:id="btn_recrutador" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#alterarPerfil" prefHeight="30.0" prefWidth="200.0" text="Recrutador" textFill="WHITE" />
+                        <Button fx:id="btn_gestor" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#alterarPerfil" prefHeight="30.0" prefWidth="200.0" text="Gestor" textFill="WHITE" />
+                        <Separator orientation="VERTICAL" prefHeight="20.0" />
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#cancelar" prefHeight="30.0" prefWidth="200.0" styleClass="btn_cancelar" text="Cancelar" textFill="WHITE" />
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
 
     </children>
 </AnchorPane>
