Arrumando a merda q fizeram

--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
@@ -50,7 +50,7 @@
                                     </children>
                                 </HBox>
                                 <Separator orientation="VERTICAL" prefHeight="15.0" visible="false" />
-                                <AnchorPane prefHeight="656.0" prefWidth="1031.0" visible="false">
+                                <AnchorPane prefHeight="656.0" prefWidth="1031.0">
                                     <children>
                                         <AnchorPane fx:id="tab_candidatos" prefHeight="639.0" prefWidth="1031.0" visible="false">
                                             <children>
