--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Admin/gestao.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -45,9 +46,9 @@
                         <Separator orientation="VERTICAL" prefHeight="5.0" visible="false" />
                         <HBox alignment="CENTER" prefHeight="26.0" prefWidth="385.0">
                            <children>
-                              <TextField prefHeight="30.0" prefWidth="1000.0" promptText="Buscar" styleClass="lineedit" />
+                              <TextField fx:id="barraPesquisar" prefHeight="30.0" prefWidth="1000.0" promptText="Buscar" styleClass="lineedit" />
                               <Separator prefWidth="40.0" visible="false" />
-                              <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="75.0" text="Procurar" textFill="WHITE" />
+                              <ComboBox fx:id="btn_filtrar" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="130.0" promptText="Filtro" />
                            </children>
                         </HBox>
                         <Separator orientation="VERTICAL" prefHeight="10.0" visible="false" />
@@ -125,7 +126,7 @@
                               <Font name="System Bold" size="36.0" />
                            </font>
                         </Label>
-                        <Separator orientation="VERTICAL" prefHeight="30.0" />
+                        <Separator orientation="VERTICAL" prefHeight="30.0" visible="false" />
                         <TextField fx:id="cv_cargo" promptText="Cargo" styleClass="lineedit">
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
@@ -151,11 +152,16 @@
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
                         </TextField>
-                        <Separator orientation="VERTICAL" prefHeight="10.0" />
+                        <Label fx:id="cv_error" prefHeight="27.0" prefWidth="370.0" textFill="RED">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <Separator orientation="VERTICAL" prefHeight="10.0" visible="false" />
                         <HBox alignment="CENTER">
                            <children>
                               <Button fx:id="salvar_vaga" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#criarVaga" prefHeight="35.0" prefWidth="120.0" styleClass="btn_confirmar" text="Salvar" textFill="WHITE" />
-                              <Separator prefWidth="30.0" />
+                              <Separator prefWidth="30.0" visible="false" />
                               <Button fx:id="cancelar_vaga" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#cancelar" prefHeight="35.0" prefWidth="120.0" styleClass="btn_cancelar" text="Cancelar" textFill="WHITE" />
                            </children>
                         </HBox>
@@ -182,6 +188,11 @@
                         <TextField fx:id="ev_requisitos" maxWidth="370.0" promptText="Requisitos" styleClass="lineedit" />
                         <TextField fx:id="ev_departamento" maxHeight="370.0" maxWidth="370.0" promptText="Departamento" styleClass="lineedit" />
                         <TextField fx:id="ev_regime" maxHeight="370.0" maxWidth="370.0" promptText="Departamento" styleClass="lineedit" />
+                        <Label fx:id="ev_error" prefHeight="27.0" prefWidth="370.0" textFill="RED">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
                               <Button fx:id="btn_ev_salvar" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="120.0" styleClass="btn_confirmar" text="Salvar" textFill="WHITE" />
