--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Login/login.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.LoginController">
+<AnchorPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Projeto_Tp1_2025_2.controllers.admin.LoginController">
    <children>
       <AnchorPane fx:id="tab_telaCadastro" prefHeight="678.0" prefWidth="1228.0" styleClass="anchorpane" stylesheets="@login.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -68,8 +68,6 @@
                               <TextField fx:id="ld_email_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="Email" styleClass="lineedit" />
                               <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
                               <TextField fx:id="ld_cpf_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="CPF" styleClass="lineedit" />
-                              <Separator fx:id="separator_formacao" orientation="VERTICAL" prefHeight="200.0" visible="false" />
-                              <TextField fx:id="ld_formacao_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="Formação" styleClass="lineedit" visible="false" />
                               <Separator minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="20.0" visible="false" />
                               <PasswordField fx:id="ld_senha_cadastro" minHeight="-Infinity" onKeyPressed="#onClickEnter" prefHeight="30.0" promptText="Senha" styleClass="lineedit" />
                               <Separator orientation="VERTICAL" prefHeight="200.0" visible="false" />
@@ -105,7 +103,7 @@
                               <Font name="Arial Black" size="37.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" prefHeight="55.0" prefWidth="351.0" text="Seja bem vindo ao recrutador" textFill="#652f90">
+                        <Label alignment="CENTER" prefHeight="55.0" prefWidth="351.0" text="Seja bem vindo ao Sistema de RH" textFill="#652f90">
                            <font>
                               <Font name="Arial" size="15.0" />
                            </font>
@@ -121,12 +119,6 @@
                               <Button fx:id="btn_cadastro" mnemonicParsing="false" onAction="#changeTabCadastro" prefHeight="40.0" prefWidth="195.0" text="Cadastrar-se" textFill="WHITE">
                                  <font>
                                     <Font name="Arial Black" size="12.0" />
-                                 </font>
-                              </Button>
-                              <Separator orientation="VERTICAL" prefHeight="20.0" visible="false" />
-                              <Button fx:id="btn_cadastro1" mnemonicParsing="false" onAction="#changeTabCadastro" prefHeight="40.0" prefWidth="195.0" text="Sou candidato (temporário)" textFill="WHITE">
-                                 <font>
-                                    <Font name="Arial Black" size="11.0" />
                                  </font>
                               </Button>
                               <Separator orientation="VERTICAL" prefHeight="20.0" visible="false" />
