--- a/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
+++ b/src/main/resources/com/Projeto_Tp1_2025_2/view/Recrutamento/MenuRecrutamento .fxml
@@ -29,6 +29,7 @@
                         <Button mnemonicParsing="false" onAction="#btn_RegistrarVaga" prefHeight="35.0" prefWidth="165.0" text="Registrar Vagas" textFill="WHITE" />
                                 <Button mnemonicParsing="false" onAction="#btn_candidatos" prefHeight="35.0" prefWidth="165.0" text="Listar Candidatos" textFill="WHITE" />
                         <Button mnemonicParsing="false" onAction="#btn_RegistrarCandidato" prefHeight="35.0" prefWidth="165.0" text="Registrar Candidato" textFill="WHITE" />
+                        <Button mnemonicParsing="false" onAction="#btn_ListarEntrevistas" prefHeight="35.0" prefWidth="165.0" text="Listar Entrevistas" textFill="WHITE" />
                         <Region prefHeight="455.0" prefWidth="165.0" />
                                 <Button fx:id="btn_sair" mnemonicParsing="false" onAction="#onClickSair" prefHeight="35.0" prefWidth="165.0" text="Sair" textFill="WHITE" />
                      </children>
@@ -200,6 +201,24 @@
                                           </HBox>
                                        </children>
                                     </VBox>
+                                 </children>
+                              </AnchorPane>
+                              <AnchorPane fx:id="tab_entrevistas" layoutX="10.0" layoutY="10.0" prefHeight="639.0" prefWidth="1031.0">
+                                 <children>
+                                    <TableView fx:id="tabEntrevistas" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="618.0" prefWidth="1031.0">
+                                       <columns>
+                                          <TableColumn fx:id="colCandidato" editable="false" minWidth="-Infinity" prefWidth="347.0" resizable="false" text="Candidato" />
+                                          <TableColumn fx:id="colVaga" editable="false" minWidth="-Infinity" prefWidth="328.0" resizable="false" text="Vaga" />
+                                          <TableColumn fx:id="colData" editable="false" minWidth="-Infinity" prefWidth="404.0" resizable="false" text="Data" />
+                                       </columns>
+                                       <contextMenu>
+                                          <ContextMenu>
+                                             <items>
+                                                <MenuItem mnemonicParsing="false" onAction="#onClickAbrirRegistrarEntrevista" text="Nova Entrevista" />
+                                             </items>
+                                          </ContextMenu>
+                                       </contextMenu>
+                                    </TableView>
                                  </children>
                               </AnchorPane>
                                     </children>
